added jcenter deployment preparation